[project]
name = "signaldegradation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torchcodec>=0.10.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "datasets>=4.5.0",
    "scipy>=1.17.0",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "dotenv>=0.9.9",
    "pyloudnorm>=0.2.0",
    "pydub>=0.25.1",
    "librosa>=0.11.0",
    "pandas>=2.0.0",
    "matplotlib>=3.0.0",
    "tabulate>=0.9.0",
    "plotly>=6.5.2",
    "umap-learn>=0.5.11",
]
